# data_wrangling_with_rust

./: README.md
data_aggregation_with_datafusion/: README.md
data_aggregation_with_datafusion/datafusion_dataframe_example/: Cargo.toml
data_aggregation_with_datafusion/datafusion_dataframe_join_example/: Cargo.toml
data_aggregation_with_datafusion/datafusion_sql_example/: Cargo.toml
data_aggregation_with_datafusion/datafusion_sql_example/src/: main.rs
data_aggregation_with_datafusion/datafusion_sql_join_example/: Cargo.toml
data_in_flight/: README.md
extending_datafusion/: README.md
introduction_to_apache_arrow_and_datafusion/: README.md
introduction_to_apache_arrow_and_datafusion/arrow_compute_example/: Cargo.toml
introduction_to_apache_arrow_and_datafusion/arrow_example/: Cargo.toml
introduction_to_apache_arrow_and_datafusion/datafusion_dataframe_example/: Cargo.toml
introduction_to_apache_arrow_and_datafusion/datafusion_dataframe_example/src/: main.rs
introduction_to_apache_arrow_and_datafusion/datafusion_sql_example/: Cargo.toml
introduction_to_apache_arrow_with_rust/: README.md
introduction_to_apache_arrow_with_rust/arrow_array_builder_example/: Cargo.toml
introduction_to_apache_arrow_with_rust/arrow_compute_example/: Cargo.toml
introduction_to_apache_arrow_with_rust/arrow_example/: Cargo.toml
introduction_to_apache_arrow_with_rust/arrow_reader_example/: Cargo.toml
introduction_to_apache_arrow_with_rust/arrow_record_batch_example/: Cargo.toml
introduction_to_datafusion_and_apache_arrow/: README.md
(+9 files in other folders)
