[package]
name = "datafusion_sql_example"
version = "0.1.0"
authors = ["Andrew Leverette <andrewleverette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "3.0.0"
tokio = { version = "0.2", features = ["full"] }
